server/vm-k8s/k8s/overlay/prod/gitlab-ci-pipelines-exporter/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab-ci-pipelines-exporter
spec:
  entryPoints:
    - internal
  routes:
    - kind: Rule
      match: Host(`gitlab-ci-exporter.i.morawskim.pl`)
      services:
        - kind: Service
          name: gitlab-ci-pipelines-exporter
          port: 80
      middlewares:
        - name: openid-auth
        - name: add-x-forwarded-proto
